Fix images not visible at 400% (#380)
* Fix images not visible at 400%

* target only webinar saleforce images

---------

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -439,6 +439,22 @@ td {
   border-top-color: #737373;
 }
 
+.post-content>p> img {
+    max-width: 100%; /* Ensures images scale with the container */
+    height: auto; /* Maintains aspect ratio */
+    display: block; /* Prevents inline spacing issues */
+    margin: 0 auto; /* Centers images */
+    image-rendering: crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+}
+
+@media (max-width: 768px) {
+    .post-content>p> img {
+        width: 100%; /* Ensures images fit smaller screens */
+        height: auto;
+    }
+}
+
 .other-protocols-container {
   display: flex;
   flex-direction: column;
